# electrical-consumption-analyzer

./: Cargo.toml  README.md
src/: data_stream.rs  main.rs
src/models/: consumer.rs  meter_reading.rs  mod.rs
